--- a/css/basket.css
+++ b/css/basket.css
@@ -272,6 +272,7 @@ li {
     border: rgba(192, 192, 192, 0.2) 0.5px solid;
     padding: 10px;
     width: 670px;
+    gap: 20px;
 }
 .shop_img {
     width: 100px;
