--- a/css/style.css
+++ b/css/style.css
@@ -172,7 +172,7 @@ li {
     height: 260px;
     left: 200px;
     top: 779px;
-    background-image: url("../img/Group 188.png");
+    background-image: url("img/Group 188.png");
 }
 .ready_set2 {
     position: absolute;
@@ -180,7 +180,7 @@ li {
     height: 260px;
     left: 800px;
     top: 779px;
-    background-image: url("../img/Group 189.png");
+    background-image: url("img/Group 189.png");
 }
 .ready_set3 {
     position: absolute;
@@ -188,7 +188,7 @@ li {
     height: 260px;
     left: 200px;
     top: 1064px;
-    background-image: url("../img/Group 190.png");
+    background-image: url("img/Group 190.png");
 }
 .ready_set4 {
     position: absolute;
@@ -196,7 +196,7 @@ li {
     height: 260px;
     left: 800px;
     top: 1064px;
-    background-image: url("../img/Group 191.png");
+    background-image: url("img/Group 191.png");
 }
 .ready_set5 {
     position: absolute;
@@ -204,7 +204,7 @@ li {
     height: 260px;
     left: 200px;
     top: 1350px;
-    background-image: url("../img/Group 192.png");
+    background-image: url("img/Group 192.png");
 }
 .ready_set6 {
     position: absolute;
@@ -212,7 +212,7 @@ li {
     height: 260px;
     left: 800px;
     top: 1350px;
-    background-image: url("../img/Group 193.png");
+    background-image: url("img/Group 193.png");
 }
 .card_icon {
     position: absolute;
